--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
     </licenses>
 
     <scm>
-        <connection>scm:git://github.com/kpiwko/jboss-javaee-6.0-tools.git</connection>
-        <developerConnection>scm:git@github.com:kpiwko/jboss-javaee-6.0-tools.git</developerConnection>
-        <url>https://github.com/kpiwko/jboss-javaee-6.0-tools</url>
+        <connection>scm:git://github.com/kpiwko/jboss-javaee-6.0-with-tools.git</connection>
+        <developerConnection>scm:git@github.com:kpiwko/jboss-javaee-6.0-with-tools.git</developerConnection>
+        <url>https://github.com/kpiwko/jboss-javaee-6.0-with-tools</url>
     </scm>
 
     <issueManagement>
